# records_and_tracking

./: .gitignore  Features-List.MD  README.md  SHOWCASE_SCRIPT.md  index.html  package-lock.json  package.json  tailwind.config.js
dev_docs/tauri/: db_config.md  setting_up_supabase_rust_sdk.md
docs/: download.html  guide.html  privacy_policy.html  terms_and_conditions.html
src/: App.css  App.tsx  index.css  main.tsx  why_use_this.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  migration_v2.sql  records_and_tracking_manifest.rc  schema.sql  seed.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/config/: firebase.rs  supabase.rs
src-tauri/src/entities/: attendance.rs  cases.rs  contacts.rs  files.rs  mod.rs  news.rs  notifications.rs  offenders.rs  prelude.rs  reports_analytics.rs  staff.rs  summaries.rs  themes.rs  users.rs
src-tauri/src/methods/: attendance.rs  auth.rs  cases.rs  files.rs  mod.rs  notifications.rs  offenders.rs  staff.rs  users.rs
src-tauri/src/sync/: engine.rs
src/audit_logs/: index.tsx
src/auth/: index.tsx
src/components/: add_new_case_file_form.tsx  add_new_file_form.tsx  add_new_staff_member_form.tsx  ai_response_card.tsx  archive_notification_modal.tsx  audit_logs_section.tsx  auth_form.tsx  auth_form_carousel.tsx  case_files_data.tsx  controlled_range_date_picker.tsx  cts_case_filters.tsx  delete_case_file_form.tsx  delete_file_form.tsx  delete_notification_modal.tsx  delete_staff_member_modal.tsx  edit _case_file_form.tsx  edit _file_form.tsx  edit_staff_member_form.tsx  files_data.tsx  files_data_filters.tsx  files_processed_simple_chart.tsx  leave_type_dropdown.tsx  left_panel.tsx  modal.tsx  navbar.tsx  notifications_data.tsx  notifications_section.tsx  required_on_date_picker.tsx  right_panel.tsx  search_bar.tsx  search_data.ts  staff_autocomplete_input.tsx  staff_data.ts  staff_deep_dive.tsx  staff_report.tsx  staff_table.tsx  staff_view_modal.tsx  summary_cards.tsx  title_bar.tsx  typewriter_text.tsx  (+4 more)
src/context/: auth_context.tsx
src/cts/: index.tsx
src/customize/: index.tsx
src/dashboard/: index.tsx
src/diary/: index.tsx
src/files/: index.tsx
src/home/: index.tsx
src/hooks/: useModal.ts
src/messaging/: index.tsx
src/notifications/: index.tsx
src/offenders/: index.tsx
src/services/: ai_functions.ts  attendance.ts  auth.ts  cases.ts  contacts.ts  files.ts  news.ts  notifications.ts  report_analytics.ts  staff.ts  summaries.ts  themes.ts  users.ts
src/staff/: index.tsx
src/store/: useFileStore.ts
src/tools/: index.tsx
