[package]
name = "records_and_tracking"
version = "0.1.5"
description = "Records And Tracking - Kilungu Law Courts"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "records_and_tracking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
# sea-orm = { version = "0.12", features = [
#     "sqlx-sqlite",
#     "runtime-tokio-native-tls",
# ] }
log = "0.4"
tauri-plugin-log = "2.4.0"

reqwest = { version = "0.11", features = ["json", "blocking"] }

chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"

# Firebase / Firestore
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"
# windows-sys = "0.59.0"
# embed-resource = "3.0.2"
# webview = "0.1.1"

tokio = "1.44.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
